--- a/po-libgimp/uk.po
+++ b/po-libgimp/uk.po
@@ -1,46 +1,46 @@
 # Ukrainian translation of gimp-modules.
 # Copyright (C) 2000 Free Software Foundation, Inc.
 # Yuri Syrota <rasta@renome.rovno.ua>, 2000.
+# Maxim Dziumanenko <mvd@mylinux.com.ua>, 2004
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GIMP 1.1.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2003-03-01 09:52--500\n"
-"Last-Translator: Yuriy Syrota <yuri@renome.rovno.ua>\n"
+"POT-Creation-Date: 2004-04-07 09:52+0300\n"
+"PO-Revision-Date: 2004-04-10 16:53+0200\n"
+"Last-Translator: Maxim Dziumanenko <mvd@mylinux.com.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: libgimp/gimpbrushmenu.c:132
-#, fuzzy
 msgid "Brush Selection"
-msgstr "Вибір одиниць"
+msgstr "Вибір пензля"
 
 #: libgimp/gimpbrushmenu.c:161 libgimp/gimppatternmenu.c:144
 msgid "_Browse..."
-msgstr ""
+msgstr "О_гляд..."
 
 #: libgimp/gimpexport.c:215 libgimp/gimpexport.c:251
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layers"
-msgstr "неможливо обробити шари"
+msgstr "%s не вдається обробити шари"
 
 #: libgimp/gimpexport.c:216 libgimp/gimpexport.c:225 libgimp/gimpexport.c:234
 msgid "Merge Visible Layers"
 msgstr "Об'єднати видимі шари"
 
 #: libgimp/gimpexport.c:224
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer offsets, size or opacity"
-msgstr "неможливо обробити шари"
+msgstr "%s не може обробити зсув, розмір або непрозорість шару"
 
 #: libgimp/gimpexport.c:233 libgimp/gimpexport.c:242
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle layers as animation frames"
-msgstr "можна обробити шари лише як анімовані кадри"
+msgstr "%s може обробляти шари лише як анімовані кадри"
 
 #: libgimp/gimpexport.c:234 libgimp/gimpexport.c:243
 msgid "Save as Animation"
@@ -48,44 +48,44 @@ msgstr "Зберегти як анімацію"
 
 #: libgimp/gimpexport.c:243 libgimp/gimpexport.c:252 libgimp/gimpexport.c:261
 msgid "Flatten Image"
-msgstr "Звести зображення"
+msgstr "Вирівняти зображення"
 
 #: libgimp/gimpexport.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle transparency"
-msgstr "неможливо обробити прозорість"
+msgstr "%s не може обробити прозорість"
 
 #: libgimp/gimpexport.c:269
-#, fuzzy, c-format
+#, c-format
 msgid "%s can't handle layer masks"
-msgstr "неможливо обробити шари"
+msgstr "%s не може обробити маски шарів"
 
 #: libgimp/gimpexport.c:270
 msgid "Apply Layer Masks"
-msgstr ""
+msgstr "Застосувати маски шару"
 
 #: libgimp/gimpexport.c:278
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB images"
-msgstr "можна обробити лише RGB-зображення"
+msgstr "%s здатен обробляли лише RGB-зображення"
 
 #: libgimp/gimpexport.c:279 libgimp/gimpexport.c:317 libgimp/gimpexport.c:326
 msgid "Convert to RGB"
 msgstr "Перетворити у RGB"
 
 #: libgimp/gimpexport.c:287
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale images"
-msgstr "можни обробити лише зображення у градація сірого"
+msgstr "%s може обробляти лише зображення у відтінках сірого"
 
 #: libgimp/gimpexport.c:288 libgimp/gimpexport.c:317 libgimp/gimpexport.c:338
 msgid "Convert to Grayscale"
-msgstr "Перетворити у градації сірого"
+msgstr "Перетворити у відтінки сірого"
 
 #: libgimp/gimpexport.c:296
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle indexed images"
-msgstr "можна обробити лише індексовані зображення"
+msgstr "%s можне обробляти лише індексовані зображення"
 
 #: libgimp/gimpexport.c:297 libgimp/gimpexport.c:326 libgimp/gimpexport.c:336
 msgid ""
@@ -93,41 +93,40 @@ msgid ""
 "(Do it manually to tune the result)"
 msgstr ""
 "Перетворити в індексоване використовуючи типові налаштування\n"
-"(Результат можна налагодити вручну)"
+"(Результат можна настроїти вручну)"
 
 #: libgimp/gimpexport.c:306
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle bitmap (two color) indexed images"
-msgstr "можна обробити лише RGB або індексовані зображення"
+msgstr "%s може обробляти лише двокольорові або індексовані зображення"
 
 #: libgimp/gimpexport.c:307
-#, fuzzy
 msgid ""
 "Convert to Indexed using bitmap default settings\n"
 "(Do it manually to tune the result)"
 msgstr ""
 "Перетворити в індексоване використовуючи типові налаштування\n"
-"(Результат можна налагодити вручну)"
+"(Результат можна настроїти вручну)"
 
 #: libgimp/gimpexport.c:316
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or grayscale images"
-msgstr "можна обробити лише зображення у градація сірого або RGB"
+msgstr "%s може обробляти лише зображення у відтінках сірого або RGB"
 
 #: libgimp/gimpexport.c:325
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle RGB or indexed images"
-msgstr "можна обробити лише RGB або індексовані зображення"
+msgstr "%s може обробляти лише RGB або індексовані зображення"
 
 #: libgimp/gimpexport.c:335
-#, fuzzy, c-format
+#, c-format
 msgid "%s can only handle grayscale or indexed images"
-msgstr "можна обробити лише зображення у градація сірого або індексовані"
+msgstr "%s може обробляти лише зображення у відтінках сірого або індексовані"
 
 #: libgimp/gimpexport.c:346
-#, fuzzy, c-format
+#, c-format
 msgid "%s needs an alpha channel"
-msgstr "необхідно альфа-канал"
+msgstr "%s необхідний альфа-канал"
 
 #: libgimp/gimpexport.c:347
 msgid "Add Alpha Channel"
@@ -135,34 +134,32 @@ msgstr "Додати альфа-канал"
 
 #: libgimp/gimpexport.c:382
 msgid "Confirm Save"
-msgstr ""
+msgstr "Підтвердження збереження"
 
 #: libgimp/gimpexport.c:388
 msgid "Confirm"
-msgstr ""
+msgstr "Підтвердити"
 
 #: libgimp/gimpexport.c:457
 msgid "Export File"
 msgstr "Експортувати файл"
 
 #: libgimp/gimpexport.c:461
-#, fuzzy
 msgid "_Ignore"
-msgstr "Ігнорувати"
+msgstr "_Ігнорувати"
 
 #: libgimp/gimpexport.c:463
-#, fuzzy
 msgid "_Export"
-msgstr "Експорт"
+msgstr "_Експорт"
 
 #. the headline
 #: libgimp/gimpexport.c:485
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Your image should be exported before it can be saved as %s for the following "
 "reasons:"
 msgstr ""
-"Ваше зображення має бути експортоване до того як воно може бути збережено з "
+"Ваше зображення має бути експортоване до того, як воно буде збережено у %s з "
 "таких причин:"
 
 #: libgimp/gimpexport.c:563
@@ -175,6 +172,8 @@ msgid ""
 "You are about to save a layer mask as %s.\n"
 "This will not save the visible layers."
 msgstr ""
+"Ви намагаєтесь зберегти маску шару як %s.\n"
+"Видимі шари не будуть збережені."
 
 #: libgimp/gimpexport.c:671
 #, c-format
@@ -182,25 +181,24 @@ msgid ""
 "You are about to save a channel (saved selection) as %s.\n"
 "This will not save the visible layers."
 msgstr ""
+"Ви намагаєтесь зберегти канал (збережену виділену область) як %s.\n"
+"Видимі шари не будуть збережені."
 
 #: libgimp/gimpfontmenu.c:89
-#, fuzzy
 msgid "Font Selection"
-msgstr "Вибір одиниць"
+msgstr "Вибір шрифту"
 
 #: libgimp/gimpgradientmenu.c:103
-#, fuzzy
 msgid "Gradient Selection"
-msgstr "Вибір одиниць"
+msgstr "Вибір градієнта"
 
 #: libgimp/gimpmenu.c:407
 msgid "None"
 msgstr "Немає"
 
 #: libgimp/gimppatternmenu.c:115
-#, fuzzy
 msgid "Pattern Selection"
-msgstr "Вибір одиниць"
+msgstr "Вибір шаблона"
 
 #: libgimp/gimpunitcache.c:57
 msgid "percent"
@@ -208,57 +206,57 @@ msgstr "відсоток"
 
 #: libgimpbase/gimputils.c:161 libgimpbase/gimputils.c:166
 msgid "(invalid UTF-8 string)"
-msgstr ""
+msgstr "(неправильний рядок UTF-8)"
 
 #: libgimpbase/gimputils.c:244
 #, c-format
 msgid "%d Bytes"
-msgstr ""
+msgstr "%d байт"
 
 #: libgimpbase/gimputils.c:249
 #, c-format
 msgid "%.2f KB"
-msgstr ""
+msgstr "%.2f кБ"
 
 #: libgimpbase/gimputils.c:253
 #, c-format
 msgid "%.1f KB"
-msgstr ""
+msgstr "%.1f кБ"
 
 #: libgimpbase/gimputils.c:257
 #, c-format
 msgid "%d KB"
-msgstr ""
+msgstr "%d кБ"
 
 #: libgimpbase/gimputils.c:264
 #, c-format
 msgid "%.2f MB"
-msgstr ""
+msgstr "%.2f МБ"
 
 #: libgimpbase/gimputils.c:268
 #, c-format
 msgid "%.1f MB"
-msgstr ""
+msgstr "%.1f МБ"
 
 #: libgimpbase/gimputils.c:272
 #, c-format
 msgid "%d MB"
-msgstr ""
+msgstr "%d МБ"
 
 #: libgimpbase/gimputils.c:279
 #, c-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f МБ"
 
 #: libgimpbase/gimputils.c:283
 #, c-format
 msgid "%.1f GB"
-msgstr ""
+msgstr "%.1f ГБ"
 
 #: libgimpbase/gimputils.c:287
 #, c-format
 msgid "%d GB"
-msgstr ""
+msgstr "%d ГБ"
 
 #: libgimpmodule/gimpmodule.c:177
 #, c-format
@@ -268,16 +266,14 @@ msgstr "Завантаження модуля: '%s'\n"
 #: libgimpmodule/gimpmodule.c:194 libgimpmodule/gimpmodule.c:213
 #: libgimpmodule/gimpmodule.c:328 libgimpmodule/gimpmodule.c:356
 #: libgimpmodule/gimpmodule.c:450
-#, fuzzy, c-format
+#, c-format
 msgid "Module '%s' load error: %s"
-msgstr ""
-"Помилка завантаження модуля \"%s\":\n"
-"%s"
+msgstr "Помилка завантаження модуля '%s': %s"
 
 #: libgimpmodule/gimpmodule.c:283
 #, c-format
 msgid "Skipping module: '%s'\n"
-msgstr "Пропуск подуля: \"%s\"\n"
+msgstr "Пропуск модуля: '%s'\n"
 
 #: libgimpmodule/gimpmodule.c:424
 msgid "Module error"
@@ -289,7 +285,7 @@ msgstr "Завантажено"
 
 #: libgimpmodule/gimpmodule.c:426
 msgid "Load failed"
-msgstr "Не вдалося завантажити"
+msgstr "Не вдається завантажити"
 
 #: libgimpmodule/gimpmodule.c:427
 msgid "Not loaded"
@@ -298,59 +294,55 @@ msgstr "Не завантажено"
 #: libgimpthumb/gimpthumb-utils.c:196
 #, c-format
 msgid "Failed to create thumbnail folder '%s'."
-msgstr ""
+msgstr "Не вдається створити каталог файлів попереднього перегляду '%s'."
 
 #: libgimpwidgets/gimpcolorbutton.c:93
-#, fuzzy
 msgid "/_Foreground Color"
-msgstr "/Колір переднього плану"
+msgstr "/_Колір переднього плану"
 
 #: libgimpwidgets/gimpcolorbutton.c:95
-#, fuzzy
 msgid "/_Background Color"
-msgstr "/Колір тла"
+msgstr "/_Колір тла"
 
 #: libgimpwidgets/gimpcolorbutton.c:98
-#, fuzzy
 msgid "/Blac_k"
-msgstr "/Чорний"
+msgstr "/_Чорний"
 
 #: libgimpwidgets/gimpcolorbutton.c:100
-#, fuzzy
 msgid "/_White"
-msgstr "/Білий"
+msgstr "/_Білий"
 
 #: libgimpwidgets/gimpcolorscales.c:142
 msgid "Scales"
-msgstr ""
+msgstr "Шкала"
 
 #: libgimpwidgets/gimpcolorscales.c:164 libgimpwidgets/gimpcolorselect.c:353
 msgid "_H"
-msgstr ""
+msgstr "_H"
 
 #: libgimpwidgets/gimpcolorscales.c:165 libgimpwidgets/gimpcolorselect.c:353
 msgid "_S"
-msgstr ""
+msgstr "_S"
 
 #: libgimpwidgets/gimpcolorscales.c:166 libgimpwidgets/gimpcolorselect.c:353
 msgid "_V"
-msgstr ""
+msgstr "_V"
 
 #: libgimpwidgets/gimpcolorscales.c:167 libgimpwidgets/gimpcolorselect.c:353
 msgid "_R"
-msgstr ""
+msgstr "_Ч"
 
 #: libgimpwidgets/gimpcolorscales.c:168 libgimpwidgets/gimpcolorselect.c:353
 msgid "_G"
-msgstr ""
+msgstr "_З"
 
 #: libgimpwidgets/gimpcolorscales.c:169 libgimpwidgets/gimpcolorselect.c:353
 msgid "_B"
-msgstr ""
+msgstr "_С"
 
 #: libgimpwidgets/gimpcolorscales.c:170
 msgid "_A"
-msgstr ""
+msgstr "_П"
 
 #: libgimpwidgets/gimpcolorscales.c:174 libgimpwidgets/gimpcolorselect.c:357
 msgid "Hue"
@@ -383,19 +375,19 @@ msgstr "Альфа"
 
 #: libgimpwidgets/gimpcolorscales.c:254
 msgid "Hexadecimal color notation as used in HTML"
-msgstr ""
+msgstr "Шістнадцятковий запис кольору, що використовується у HTML"
 
 #: libgimpwidgets/gimpcolorscales.c:268
 msgid "He_x Triplet:"
-msgstr ""
+msgstr "_Шістнадцятковий триплет:"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Поточний"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Старий"
 
 #: libgimpwidgets/gimpfileentry.c:350
 msgid "Select Folder"
@@ -419,88 +411,87 @@ msgstr "Гігабайти"
 
 #: libgimpwidgets/gimppatheditor.c:243
 msgid "Writable"
-msgstr ""
+msgstr "Можливість запису"
 
 #: libgimpwidgets/gimppatheditor.c:252
-#, fuzzy
 msgid "Folder"
-msgstr "Вибір теки"
+msgstr "Тека"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
 "Click the eyedropper, then click a color anywhere on your screen to select "
 "that color."
 msgstr ""
+"Виберіть піпетку, потім вкажіть колір у будь-якому місці екрану, щоб його "
+"вибрати."
 
 #: libgimpwidgets/gimpstock.c:113
-#, fuzzy
 msgid "Anchor"
-msgstr "дюйм"
+msgstr "Прикріпити"
 
 #: libgimpwidgets/gimpstock.c:114
-#, fuzzy
 msgid "_Duplicate"
-msgstr "піка"
+msgstr "_Дублювати"
 
 #: libgimpwidgets/gimpstock.c:115
 msgid "_Edit"
-msgstr ""
+msgstr "_Правка"
 
 #: libgimpwidgets/gimpstock.c:116
 msgid "Linked"
-msgstr ""
+msgstr "Пов'язані"
 
 #: libgimpwidgets/gimpstock.c:117
 msgid "Paste as New"
-msgstr ""
+msgstr "Вставити як нове"
 
 #: libgimpwidgets/gimpstock.c:118
 msgid "Paste Into"
-msgstr ""
+msgstr "Вставити у"
 
 #: libgimpwidgets/gimpstock.c:119
 msgid "_Reset"
-msgstr ""
+msgstr "С_кинути"
 
 #: libgimpwidgets/gimpstock.c:120
 msgid "Visible"
-msgstr ""
+msgstr "Видимий"
 
 #: libgimpwidgets/gimpstock.c:168
 msgid "L_etter Spacing"
-msgstr ""
+msgstr "Відстань між _буквами"
 
 #: libgimpwidgets/gimpstock.c:169
 msgid "L_ine Spacing"
-msgstr ""
+msgstr "Відстань між _рядками"
 
 #: libgimpwidgets/gimpstock.c:184
 msgid "_Resize"
-msgstr ""
+msgstr "Змінити _розмір"
 
 #: libgimpwidgets/gimpstock.c:185 libgimpwidgets/gimpstock.c:284
 msgid "_Scale"
-msgstr ""
+msgstr "Мас_штаб"
 
 #: libgimpwidgets/gimpstock.c:263
 msgid "Crop"
-msgstr ""
+msgstr "Кадрувати"
 
 #: libgimpwidgets/gimpstock.c:280
 msgid "_Transform"
-msgstr ""
+msgstr "Пере_творити"
 
 #: libgimpwidgets/gimpstock.c:283
 msgid "_Rotate"
-msgstr ""
+msgstr "Пов_ернути"
 
 #: libgimpwidgets/gimpstock.c:285
 msgid "_Shear"
-msgstr ""
+msgstr "С_трижка"
 
 #: libgimpwidgets/gimpunitmenu.c:304
 msgid "More..."
-msgstr "Ще..."
+msgstr "Додатково..."
 
 #: libgimpwidgets/gimpunitmenu.c:614
 msgid "Unit Selection"
@@ -508,187 +499,177 @@ msgstr "Вибір одиниць"
 
 #: libgimpwidgets/gimpunitmenu.c:657
 msgid "Unit"
-msgstr "Одиниці"
+msgstr "Одиниця"
 
 #: libgimpwidgets/gimpunitmenu.c:661
 msgid "Factor"
 msgstr "Множник"
 
 #: libgimpwidgets/gimpwidgets.c:1291
-#, fuzzy
 msgid ""
 "Use this value for random number generator seed - this allows you to repeat "
 "a given \"random\" operation"
 msgstr ""
-"Якщо кнопку \"Час\" не натиснуто, це значення використовується для "
-"ініціалізації генератора випадкових чисел, то це дозволяє вам повторити дану "
-"\"випадкову\" операцію"
+"Використовуйте цю кнопку для ініціалізації генератора випадкових чисел - це "
+"дозволить вам повторити дану \"випадкову\" операцію"
 
 #: libgimpwidgets/gimpwidgets.c:1295
 msgid "_New Seed"
-msgstr ""
+msgstr "_Нове значення"
 
 #: libgimpwidgets/gimpwidgets.c:1308
-#, fuzzy
 msgid "Seed random number generator with a generated random number"
 msgstr ""
-"Ініціалізувати генератор випадкових чисел поточним часом - це гарантує "
-"надійну \"випадковість\""
+"Ініціалізувати генератор випадкових чисел сгенерованим випадковим числом"
 
 #: libgimpwidgets/gimpwidgets.c:1312
 msgid "_Randomize"
-msgstr ""
+msgstr "_Перемішати"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
-msgstr ""
+msgstr "Фільтр, що моделює брак кольору (алгоритм Бреттеля-Виєнота-Моллона)"
 
 #: modules/cdisplay_colorblind.c:190
 msgid "Color Deficient Vision"
-msgstr ""
+msgstr "Вигляд зі зниженим сприйняттям кольору"
 
 #: modules/cdisplay_colorblind.c:464
 msgid "Color _Deficiency Type:"
-msgstr ""
+msgstr "Тип з_ниженого сприйняття кольору:"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
-msgstr ""
+msgstr "Протанопія (нечутливість до червоного)"
 
 #: modules/cdisplay_colorblind.c:476
 msgid "Deuteranopia (insensitivity to green)"
-msgstr ""
+msgstr "Девтеранопія (нечутливість до зеленого)"
 
 #: modules/cdisplay_colorblind.c:479
 msgid "Tritanopia (insensitivity to blue)"
-msgstr ""
+msgstr "Трітаопія (нечутливість до синього)"
 
 #: modules/cdisplay_gamma.c:90
 msgid "Gamma color display filter"
-msgstr ""
+msgstr "Фільтр кольорової гами"
 
 #: modules/cdisplay_gamma.c:156
 msgid "Gamma"
-msgstr ""
+msgstr "Гама"
 
 #: modules/cdisplay_gamma.c:311
 msgid "_Gamma:"
-msgstr ""
+msgstr "_Гама:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
-msgstr ""
+msgstr "Фільтр підвищеної контрастності"
 
 #: modules/cdisplay_highcontrast.c:156
 msgid "Contrast"
-msgstr ""
+msgstr "Контрастність"
 
 #: modules/cdisplay_highcontrast.c:308
 msgid "Contrast C_ycles:"
-msgstr ""
+msgstr "С_тупінь контрастності:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
-msgstr ""
+msgstr "Фільтр налаштовування передачі кольору, що використовує ICC"
 
 #: modules/cdisplay_proof.c:166
 msgid "Color Proof"
-msgstr ""
+msgstr "Налаштовування передачі кольору"
 
 #: modules/cdisplay_proof.c:319
 msgid "Perceptual"
-msgstr ""
+msgstr "Перцепційний"
 
 #: modules/cdisplay_proof.c:321
 msgid "Relative Colorimetric"
-msgstr ""
+msgstr "Віндосн. колориметричний"
 
 #: modules/cdisplay_proof.c:325
 msgid "Absolute Colorimetric"
-msgstr ""
+msgstr "Абсол. колориметричний"
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Тип:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Файл профілю ICC"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Профіль:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "Компенсація _чорних цяток"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
-msgstr ""
+msgstr "Вибору кольору - CMYK"
 
 #: modules/colorsel_cmyk.c:132
 msgid "CMYK"
-msgstr ""
+msgstr "CMYK"
 
 #: modules/colorsel_cmyk.c:149
 msgid "_C"
-msgstr ""
+msgstr "_C"
 
 #: modules/colorsel_cmyk.c:150
 msgid "_M"
-msgstr ""
+msgstr "_M"
 
 #: modules/colorsel_cmyk.c:151
 msgid "_Y"
-msgstr ""
+msgstr "_Y"
 
 #: modules/colorsel_cmyk.c:152
 msgid "_K"
-msgstr ""
+msgstr "_K"
 
 #: modules/colorsel_cmyk.c:156
-#, fuzzy
 msgid "Cyan"
-msgstr "Скасувати"
+msgstr "Бірюзовий"
 
 #: modules/colorsel_cmyk.c:157
 msgid "Magenta"
-msgstr ""
+msgstr "Пурпурний"
 
 #: modules/colorsel_cmyk.c:158
 msgid "Yellow"
-msgstr ""
+msgstr "Жовтий"
 
 #: modules/colorsel_cmyk.c:159
-#, fuzzy
 msgid "Black"
-msgstr "/Чорний"
+msgstr "Чорний"
 
 #: modules/colorsel_cmyk.c:193
 msgid "Black Pullout (%):"
-msgstr ""
+msgstr "Вміст чорного (%):"
 
 #: modules/colorsel_triangle.c:110
 msgid "Painter-style triangle color selector"
-msgstr ""
+msgstr "Вибір кольору - трикутник"
 
 #: modules/colorsel_triangle.c:182
 msgid "Triangle"
-msgstr ""
+msgstr "Трикутник"
 
 #: modules/colorsel_water.c:104
 msgid "Watercolor style color selector"
-msgstr ""
+msgstr "Тип вибору кольору - акварель"
 
 #: modules/colorsel_water.c:176
 msgid "Watercolor"
-msgstr ""
+msgstr "Акварель"
 
 #: modules/colorsel_water.c:251
 msgid "Pressure"
-msgstr ""
-
-#, fuzzy
-#~ msgid "Parameter Settings"
-#~ msgstr "Вибір одиниць"
+msgstr "Тиск"
