* po/en_CA.po 	* po-libgimp/en_CA.po 	* po-plug-ins/en_CA.po:
	  Updated Canadian English translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12919 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-10  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-04-10  Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* uk.po: Updated Ukrainian translation
