--- a/po-libgimp/en_CA.po
+++ b/po-libgimp/en_CA.po
@@ -8,13 +8,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgimp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-20 23:20+0100\n"
-"PO-Revision-Date: 2004-02-23 20:09-0500\n"
+"POT-Creation-Date: 2004-04-10 20:01-0400\n"
+"PO-Revision-Date: 2004-04-10 20:02-0400\n"
 "Last-Translator: Adam Weinberger <adamw@FreeBSD.org>\n"
 "Language-Team: English/Canada <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 #: libgimp/gimpbrushmenu.c:132
 msgid "Brush Selection"
@@ -153,7 +153,6 @@ msgstr "_Ignore"
 msgid "_Export"
 msgstr "_Export"
 
-#. the headline
 #: libgimp/gimpexport.c:485
 #, c-format
 msgid ""
@@ -411,14 +410,12 @@ msgid "GigaBytes"
 msgstr "GigaBytes"
 
 #: libgimpwidgets/gimppatheditor.c:243
-#, fuzzy
 msgid "Writable"
-msgstr "Triangle"
+msgstr "Writable"
 
 #: libgimpwidgets/gimppatheditor.c:252
-#, fuzzy
 msgid "Folder"
-msgstr "Select Folder"
+msgstr "Folder"
 
 #: libgimpwidgets/gimppickbutton.c:141
 msgid ""
@@ -525,9 +522,8 @@ msgid "Seed random number generator with a generated random number"
 msgstr "Seed random number generator with a generated random number"
 
 #: libgimpwidgets/gimpwidgets.c:1312
-#, fuzzy
 msgid "_Randomize"
-msgstr "Randomize"
+msgstr "_Randomize"
 
 #: modules/cdisplay_colorblind.c:124
 msgid "Color deficit simulation filter (Brettel-Vienot-Mollon algorithm)"
@@ -676,3 +672,4 @@ msgstr "Watercolour"
 #: modules/colorsel_water.c:251
 msgid "Pressure"
 msgstr "Pressure"
+
