2004-04-11  Sven Neumann  <sven@gimp.org>
	* de.po: fixed typo spotted by Roman Joost and did some minor
	updates.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12920 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-11  Sven Neumann  <sven@gimp.org>
+
+	* de.po: fixed typo spotted by Roman Joost and did some minor
+	updates.
+
 2004-04-10  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
