--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: GIMP 1.3.27\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-23 16:10+0100\n"
-"PO-Revision-Date: 2004-04-03 19:40+0200\n"
+"PO-Revision-Date: 2004-04-11 13:20+0200\n"
 "Last-Translator: Sven Neumann <sven@gimp.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -2483,7 +2483,7 @@ msgstr "%s schließen?"
 
 #: app/display/gimpdisplayshell.c:1414
 msgid "_Discard changes"
-msgstr ""
+msgstr "Änderungen _verwerfen"
 
 #: app/display/gimpdisplayshell.c:1454
 #, c-format
@@ -2492,7 +2492,7 @@ msgstr "An '%s' wurden Veränderungen vorgenommen."
 
 #: app/display/gimpdisplayshell.c:1468
 msgid "Unsaved changes will be lost."
-msgstr ""
+msgstr "Änderungen seit der letzten Sicherung gehen verloren."
 
 #: app/display/gimpdisplayshell-dnd.c:87
 msgid "Drop New Layer"
@@ -2858,7 +2858,7 @@ msgstr ""
 
 #: app/gui/convert-dialog.c:498
 msgid "Cannot convert to a palette with more than 256 colors."
-msgstr ""
+msgstr "Kann nicht in eine Palette mit mehr als 256 Farben konvertieren."
 
 #: app/gui/convert-dialog.c:517
 msgid "Select Custom Palette"
@@ -3966,9 +3966,8 @@ msgid "/Select/_Invert"
 msgstr "/Auswahl/_Invertieren"
 
 #: app/gui/image-menu.c:292
-#, fuzzy
 msgid "/Select/Fr_om Path"
-msgstr "/Auswahl/_Pfad aus Auswahl"
+msgstr "/Auswahl/_Vom Pfad"
 
 #: app/gui/image-menu.c:297
 msgid "/Select/_Float"
@@ -6224,7 +6223,7 @@ msgstr "Mit Hilfe eines Malwerkzeugs nachziehen"
 
 #: app/gui/stroke-dialog.c:214
 msgid "Paint Tool:"
-msgstr "Makwerkzeug:"
+msgstr "Malwerkzeug:"
 
 #: app/gui/templates-commands.c:127
 msgid "New Template"
@@ -8623,7 +8622,7 @@ msgstr "GIMP Text Editor"
 
 #: app/tools/gimptexttool.c:828 app/tools/gimptexttool.c:831
 msgid "Confirm Text Editing"
-msgstr ""
+msgstr "Bestätigung für Bearbeiten des Textes"
 
 #: app/tools/gimptexttool.c:852
 msgid ""
@@ -8633,6 +8632,9 @@ msgid ""
 "\n"
 "You can edit the layer or create a new text layer from its text attributes."
 msgstr ""
+"Die ausgewählte Ebene ist eine Text-Ebene aber sie ist mit anderen Werkzeugen modifiziert wurde. Diese Änderungen gehen verloren, wenn Sie jetzt das Text-Werkzeug benutzen.\n"
+"\n"
+"Sie können die Ebene bearbeiten oder eine neue Text-Ebene mit denselben Text-Attributen erstellen."
 
 #: app/tools/gimpthresholdtool.c:93
 msgid "Reduce image to two colors using a threshold"
@@ -9511,6 +9513,8 @@ msgid ""
 "New Layer\n"
 "%s  New Layer Dialog"
 msgstr ""
+"Neue Ebene\n"
+"%s Dialog für neue Ebene"
 
 #: app/widgets/gimplayertreeview.c:209
 msgid "Duplicate Layer"
@@ -9776,6 +9780,8 @@ msgid ""
 "New Path\n"
 "%s New Path Dialog"
 msgstr ""
+"Neuer Pfad\n"
+"%s Dialog für neuen Pfad"
 
 #: app/widgets/gimpvectorstreeview.c:133
 msgid "Duplicate Path"
