2004-04-11  Manish Singh  <yosh@gimp.org>
        * plug-ins/pygimp/plug-ins/py-slice.py: When using a separate dir for
        images, actually prepend the dir to the img srcs in the html. Allow
        only horizontal or vertical guides in an image, do not require both.
        A bit smarter path handling. Addresses most of bug #138714.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12922 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-04-11  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/plug-ins/py-slice.py: When using a separate dir for
+	images, actually prepend the dir to the img srcs in the html. Allow
+	only horizontal or vertical guides in an image, do not require both.
+	A bit smarter path handling. Addresses most of bug #138714.
+
 2004-04-11  Hans Breuer  <hans@breuer.org>
 
 	* app/makefile.msc : build sanity.obj
