2004-04-12  Sven Neumann  <sven@gimp.org>
	* libgimpmath/Makefile.am: remove test-md5 on make clean.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12923 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-12  Sven Neumann  <sven@gimp.org>
+
+	* libgimpmath/Makefile.am: remove test-md5 on make clean.
+
 2004-04-11  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/plug-ins/py-slice.py: When using a separate dir for
