--- a/tips/es.po
+++ b/tips/es.po
@@ -1,21 +1,23 @@
+# translation of es.po to Spanish
 # translation of gimp-tips.HEAD.po to Spanish
 # Copyright © 2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the gimp 1.3.X package.
 # Francisco Javier F. Serrador <serrador@arrakis.es>, 2003.
 # Pablo G. del Campo <pablodc@bigfoot.com>, 2003, 2004.
+# Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gimp-tips.HEAD\n"
+"Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-20 22:57+0100\n"
-"PO-Revision-Date: 2004-03-05 16:00+0100\n"
-"Last-Translator: Pablo G. del Campo <pablodc@bigfoot.com>\n"
+"PO-Revision-Date: 2004-04-12 19:41+0200\n"
+"Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3\n"
+"X-Generator: KBabel 1.3.1\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: tips/gimp-tips.xml.in.h:1
@@ -43,7 +45,7 @@ msgid ""
 "<tt>Ctrl</tt>-click with the Bucket Fill tool to have it use the background "
 "color instead of the foreground color."
 msgstr ""
-"Presionando <tt>Ctrl</tt>-clic con la herramienta de relleno del cubo para "
+"Puede presionar <tt>Ctrl</tt> y al pulsar con la herramienta de Cubo de Relleno para "
 "que ésta utilice el color de fondo en lugar del color de frente."
 
 #: tips/gimp-tips.xml.in.h:5
@@ -59,9 +61,9 @@ msgid ""
 "<tt>Shift</tt>-click on the eye icon in the Layers dialog to hide all layers "
 "but that one. <tt>Shift</tt>-click again to show all layers."
 msgstr ""
-"Haga <tt>Mayús.</tt>-pulsar sobre icono del ojo en el diálogo de capas para "
-"ocultar todas las capas menos la seleccionada. <tt>Mayús.</tt>-pulsar "
-"nuevamente para mostrar todas las capas."
+"Presione<tt>Mayús.</tt> y pulsar sobre el icono del ojo en el diálogo de «Capas» para "
+"ocultar todas las capas menos la seleccionada. Presione <tt>Mayús.</tt> y pulse "
+"otra vez en él para mostrar todas las capas."
 
 #: tips/gimp-tips.xml.in.h:7
 msgid ""
@@ -70,7 +72,7 @@ msgid ""
 "or \"Anchor Layer buttons\" in the Layers dialog, or use the menus to do the "
 "same."
 msgstr ""
-"Una selección flotante debe ser anclada a una capa nueva o a la última capa "
+"Una selección flotante debe anclarse a una capa nueva o a la última capa "
 "activa antes de realizar otras operaciones sobre la imagen. Pulse sobre los "
 "botones «Capa nueva» o «Botones de capa del anclaje» en el diálogo de "
 "«Capas» o utilice los menús para hacer lo mismo."
@@ -83,10 +85,10 @@ msgid ""
 "Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Después de activar las «Combinaciones de teclas dinámicas» en el diálogo de "
-"preferencias puede reasignar combinaciones de teclas. Haga esto abriendo el "
+"«Preferencias» puede reasignar combinaciones de teclas. Haga esto abriendo el "
 "menú, seleccionando un elemento del menú y pulsando la combinación de teclas "
 "deseada. Si está activado «Guardar las combinaciones de teclas» las "
-"combinaciones serán guardadas cuando salga de El GIMP."
+"combinaciones se guardarán al salir de El GIMP."
 
 #: tips/gimp-tips.xml.in.h:9
 msgid ""
@@ -96,7 +98,7 @@ msgid ""
 msgstr ""
 "Pulse y arrastre sobre una regla para colocar una «Guía» sobre la imagen. "
 "Todas las selecciones arrastradas se ajustarán a las guías. Puede quitar "
-"lasguías arrastrándolas fuera de la imagen utilizando la herramienta «Mover»."
+"las guías arrastrándolas fuera de la imagen utilizando la herramienta «Mover»."
 
 #: tips/gimp-tips.xml.in.h:10
 msgid ""
@@ -105,8 +107,8 @@ msgid ""
 "&gt;Colors-&gt;Levels). If there are any color casts, you can correct them "
 "with the Curves tool (Layer-&gt;Colors-&gt;Curves)."
 msgstr ""
-"Si algunas de sus fotografías digitalizadas no tienen suficiente coloridos, "
-"puede mejorar su rango de tonos fácilmente con el botón «Auto» en la "
+"Si alguna de sus fotografías digitalizadas no tiene suficiente colorido, "
+"puede mejorar sus rangos de tonos fácilmente con el botón «Auto» en la "
 "herramienta de niveles (Capa-&gt;Colores-&gt;Niveles). Si hay conversiones "
 "de color puede corregirlas con la herramienta Curvas (Capa-&gt;Colores-&gt;"
 "Curvas)."
@@ -147,7 +149,7 @@ msgid ""
 "Nearly all image operations are performed by right-clicking on the image. "
 "And don't worry, you can undo most mistakes..."
 msgstr ""
-"Casi todas las operaciones de imágenes son ejecutadas al pulsar con el botón "
+"Casi todas las operaciones de imágenes se ejecutan al pulsar con el botón "
 "derecho sobre la imagen. Y no se preocupe, puede deshacer la mayoría de los "
 "errores..."
 
@@ -181,8 +183,7 @@ msgid ""
 "will be saved compressed. Of course loading compressed images works too."
 msgstr ""
 "El GIMP soporta la compresión gzip al vuelo. Sólo agregue <tt>.gz</tt> (o "
-"<tt>.bz2</tt>, si tiene instalado bzip2) al nombre de archivo y su imagen "
-"será guardada comprimida. Por supuesto la carga de imágenes comprimidas "
+"<tt>.bz2</tt>, si tiene instalado bzip2) al nombre de archivo y su imagen se guardará comprimida. Por supuesto la carga de imágenes comprimidas "
 "también funciona."
 
 #: tips/gimp-tips.xml.in.h:18
@@ -193,7 +194,7 @@ msgid ""
 msgstr ""
 "El GIMP utiliza capas para permitirle organizar su imagen. Piense en ellas "
 "como una pila de diapositivas o filtros, de modo que al mirar a través de "
-"ellos se ve una composición de sus contenidos."
+"ellos se ve una composición de su contenido."
 
 #: tips/gimp-tips.xml.in.h:19
 msgid ""
@@ -203,7 +204,7 @@ msgid ""
 msgstr ""
 "El diálogo de selección de archivos posee un modo de autocompletar la línea "
 "de comando con la tecla<tt>Tabulador</tt>, del mismo modo que el intérprete "
-"de comandos. Escriba parte del nombre de un archivo, presione <tt>Tabulador</"
+"de comandos. Escriba parte del nombre de un archivo, pulse el <tt>Tabulador</"
 "tt> y listo: se completa automáticamente."
 
 #: tips/gimp-tips.xml.in.h:20
@@ -214,9 +215,9 @@ msgid ""
 "and selecting \"Add Alpha Channel\"."
 msgstr ""
 "La capa con el nombre «Fondo» es especial debido a que carece de "
-"transparencia. Esto no le permite agregar una máscara a la capa o moverla "
-"hacia arriba en la pila. Podría agregarle transparencia pulsando con el "
-"botón derecho en el diálogo de «Capas y luego seleccionado «Añadir canal "
+"transparencia. Esto le impide añadir una máscara de capa o subirla "
+"en la pila. Podría añadirle transparencia pulsando con el "
+"botón derecho en el diálogo de «Capas y luego seleccionando «Añadir canal "
 "alfa»."
 
 #: tips/gimp-tips.xml.in.h:21
@@ -229,9 +230,9 @@ msgid ""
 msgstr ""
 "Para crear un círculo perfecto mantenga presionada la tecla <tt>Mayús.</tt> "
 "mientras realiza una selección de tipo elíptico. Para colocar un círculo con "
-"precisión arrastre las tangentes de las guías horizontales y verticales "
-"hacia el círculo que desea seleccionar, coloque su cursor en la intersección "
-"de las guías y la selección resultante sólo tocará las guías."
+"precisión arrastre las guías horizontales y verticales tangentes a la circunderencia "
+"que desea seleccionar, coloque su cursor en la intersección de las guías y la "
+"selección resultante sólo tocará las guías."
 
 #: tips/gimp-tips.xml.in.h:22
 msgid ""
@@ -241,7 +242,7 @@ msgid ""
 "constrained to 15 degree angles."
 msgstr ""
 "Cuando está utilizando una herramienta de dibujo (Pincel, Aerógrafo o Lápiz) "
-"hacer <tt>Mayús.</tt>-pulsar dibujará una línea recta desde su último punto "
+"presionar <tt>Mayús.</tt>y pulsar dibujará una línea recta desde su último punto "
 "de dibujo hasta la posición actual del cursor. Si también presiona <tt>Ctrl</"
 "tt> la línea se limitará a ángulos de 15 grados."
 
@@ -252,10 +253,10 @@ msgid ""
 "the layers and every aspect of your work-in-progress. Once a project is "
 "completed, you can save it as JPEG, PNG, GIF, ..."
 msgstr ""
-"Cuando guarde una imagen para trabajar con ella más tarde, pruebe usar XCF, "
+"Cuando guarde una imagen para trabajar con ella más tarde, pruebe a usar XCF, "
 "el formato de archivo nativo de El GIMP (utilice la extensión <tt>.xcf</"
 "tt>). Este formato guarda las capas y todos los aspectos del avance de su "
-"trabajo. Una vez que su proyecto está terminado puede guardarla como JPEG, "
+"trabajo. Una vez que su proyecto esté terminado puede guardarla como JPEG, "
 "PNG, GIF, ..."
 
 #: tips/gimp-tips.xml.in.h:24
@@ -264,9 +265,9 @@ msgid ""
 "makes the window move, your window manager uses the <tt>Alt</tt> key "
 "already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
-"Puede ajustar y reemplazar una selección utilizando <tt>ALT</tt> y "
-"arrastrar. Si esto hace que la ventana se mueva su administrador de ventanas "
-"ya utiliza la tecla <tt>ALT</tt>. Intente presionar <tt>Shift</tt> al mismo "
+"Puede ajustar y recolocar una selección utilizando <tt>Alt</tt> y "
+"arrastrar. Si esto hace que la ventana se mueva, su administrador de ventanas "
+"ya utiliza la tecla <tt>Alt</tt>. Intente presionando <tt>Shift</tt> al mismo "
 "tiempo."
 
 #: tips/gimp-tips.xml.in.h:25
@@ -283,8 +284,8 @@ msgid ""
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
-"Puede crear y editar selecciones complejas usando la herramienta de ruta. El "
-"diálogo de rutas le permite trabajar sobre múltiples rutas y convertirlas en "
+"Puede crear y editar selecciones complejas usando la herramienta «Ruta». El "
+"diálogo de «Rutas» le permite trabajar sobre múltiples rutas y convertirlas en "
 "selecciones."
 
 #: tips/gimp-tips.xml.in.h:27
@@ -292,7 +293,7 @@ msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
 msgstr ""
-"Puede arrastrar un capa desde el diálogo de «Capas» y soltarla sobre la caja "
+"Puede arrastrar una capa desde el diálogo de «Capas» y soltarla sobre la caja "
 "de herramientas. Esto creará un imagen nueva conteniendo sólo esa capa."
 
 #: tips/gimp-tips.xml.in.h:28
@@ -313,7 +314,7 @@ msgid ""
 msgstr ""
 "Puede dibujar círculos o rectángulos simples utilizando Editar-&gt;Selección "
 "de trazo. Esto traza el borde de su selección actual. Se pueden dibujar "
-"formas más complejas utilizando la herramienta Ruta o con Filtros-&gt;"
+"formas más complejas utilizando la herramienta «Ruta» o con Filtros-&gt;"
 "Renderizar-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
@@ -331,7 +332,7 @@ msgid ""
 "a layer in the Layers dialog."
 msgstr ""
 "Puede realizar muchas operaciones de capas pulsando con el botón derecho "
-"sobre la etiqueta de la una capa en el diálogo Capas."
+"sobre la etiqueta de texto de una capa en el diálogo Capas."
 
 #: tips/gimp-tips.xml.in.h:32
 msgid ""
@@ -340,8 +341,8 @@ msgid ""
 "circle, or to have it centered on its starting point."
 msgstr ""
 "Puede presionar o soltar la teclas <tt>Mayús.</tt> y <tt>Ctrl</tt> mientras "
-"está haciendo una selección para limitarla a un cuadrado perfecto o un "
-"círculo, o para tenerla centrada sobre su punto de inicio."
+"está haciendo una selección para limitarla a un cuadrado o "
+"círculo perfecto, o para tenerla centrada sobre su punto de inicio."
 
 #: tips/gimp-tips.xml.in.h:33
 msgid ""
@@ -350,7 +351,7 @@ msgid ""
 "dialog, you can toggle the visibility of this new channel or convert it to a "
 "selection."
 msgstr ""
-"Puede guardar un selección a un canal (Seleccionar-&gt;Guardar en canal) y "
+"Puede guardar una selección en un canal (Seleccionar-&gt;Guardar en canal) y "
 "luego modificar este canal con cualquier herramienta de pintura. Usando los "
 "botones del diálogo puede activar la visibilidad de este canal nuevo o "
 "convertirlo en una selección."
@@ -384,3 +385,4 @@ msgstr ""
 "izquierda de la ventana de la imagen. Cambie su selección pintando sobre la "
 "imagen y pulse otra vez sobre el botón para convertirla de nuevo en una "
 "selección normal."
+
