2004-04-12  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
	* es.po: Updated Spanish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12925 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-12  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Fixed some errors in Spansih translation.
+
 2004-04-11  Sven Neumann  <sven@gimp.org>
 
 	* de.po: fixed typo spotted by Roman Joost and did some minor
