2004-04-12  Sven Neumann  <sven@gimp.org>
	* configure.in: cleaned up the check for Xmu. Include <gdk/gdkx.h>
	when testing for Xmu.h. Fixes bug #139803.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12928 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-04-12  Sven Neumann  <sven@gimp.org>
 
+	* configure.in: cleaned up the check for Xmu. Include <gdk/gdkx.h>
+	when testing for Xmu.h. Fixes bug #139803.
+
+2004-04-12  Sven Neumann  <sven@gimp.org>
+
 	* libgimpmath/Makefile.am: remove test-md5 on make clean.
 
 2004-04-11  Manish Singh  <yosh@gimp.org>
