--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-12  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Updated British English translation
+
 2004-04-12  Marco Ciampa <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
