2004-04-13  Sven Neumann  <sven@gimp.org>
	* plug-ins/imagemap/imap_file.c (do_file_error_dialog): convert
	the filename to UTF-8 before displaying it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12933 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-13  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/imagemap/imap_file.c (do_file_error_dialog): convert
+	the filename to UTF-8 before displaying it.
+
 2004-04-13  Michael Natterer  <mitch@gimp.org>
 
 	GimpItem undo group cleanup in preparation of fixing bug #138356:
